--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -348,7 +348,8 @@ var camera_id = {{ camera_id }};
             <div id="CAMERA_SQM__EXPOSURE-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div></div>
+            <div>
+            </div>
         </div>
     </div>
 
@@ -361,7 +362,9 @@ var camera_id = {{ camera_id }};
             <div id="CAMERA_SQM__GAIN-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div></div>
+            <div>
+                <div>Minimum Gain permitted: <b>{{ "%0.2f"|format(camera_minGain | float) }}</b></div>
+            </div>
         </div>
     </div>
 
@@ -374,7 +377,8 @@ var camera_id = {{ camera_id }};
             <div id="CAMERA_SQM__EXPOSURE_PERIOD-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div></div>
+            <div>
+            </div>
         </div>
     </div>
 
