remove beta tag

--- a/indi_allsky/flask/templates/system.html
+++ b/indi_allsky/flask/templates/system.html
@@ -835,7 +835,7 @@ $('#form_timezone').on('submit', function() {
 
 <div class="row">
     <div class="col-sm-2"></div>
-    <div class="col-sm-2">(BETA) Unattended Upgrade<br><div style="font-size:10px">CLI: ./misc/unattended_upgrade.sh</div></div>
+    <div class="col-sm-2">Unattended Upgrade<br><div style="font-size:10px">CLI: ./misc/unattended_upgrade.sh</div></div>
     <div class="col-sm-2">
         <input class="form-check-input" id="UPGRADE_CONFIRM1" name="UPGRADE_CONFIRM1" type="checkbox" value="y"> Confirm 1
     </div>
