--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -3595,6 +3595,22 @@ var camera_id = {{ camera_id }};
             </div>
         </div>
         <div class="col-sm-8">
+            <div>Take periodic images at a fixed exposure/gain for brightness/SQM measurements</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.CAMERA_SQM__ENABLE_DAY.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.CAMERA_SQM__ENABLE_DAY(class='form-check-input') }}
+                <div id="CAMERA_SQM__ENABLE_DAY-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8">
+            <div>DO NOT USE - Only for testing functionality</div>
         </div>
     </div>
 
@@ -9859,6 +9875,7 @@ const checkbox_field_names = [
     'ENCRYPT_PASSWORDS',
     'CCD_CONFIG__AUTO_GAIN_ENABLE',
     'CAMERA_SQM__ENABLE',
+    'CAMERA_SQM__ENABLE_DAY',
     'FOCUS_MODE',
     'USE_NIGHT_COLOR',
     'AUTO_WB',
