record and report raw magnitude measurement

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -3669,6 +3669,7 @@ var camera_id = {{ camera_id }};
         </div>
         <div class="col-sm-8">
             <div>
+                <div>Last Raw Magnitude measurement: <b>{{ camera_sqm_raw_mag_str }}</b></div>
             </div>
         </div>
     </div>
