add SQM wiki link

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -3595,6 +3595,7 @@ var camera_id = {{ camera_id }};
             </div>
         </div>
         <div class="col-sm-8">
+            <div><a href="https://github.com/aaronwmorris/indi-allsky/wiki/SQM-Sky-Brightness-Measurement" class="text-decoration-none link-info" target="_blank">SQM Wiki</a></div>
             <div>Take periodic images at a fixed exposure/gain for brightness/SQM measurements</div>
         </div>
     </div>
@@ -8164,6 +8165,7 @@ var camera_id = {{ camera_id }};
             <div id="TEMP_SENSOR__LUX_MAGNITUDE_OFFSET-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
+            <div><a href="https://github.com/aaronwmorris/indi-allsky/wiki/SQM-Sky-Brightness-Measurement" class="text-decoration-none link-info" target="_blank">SQM Wiki</a></div>
         </div>
     </div>
 
