additional feedback about SQM

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -3671,6 +3671,7 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-8">
             <div>
                 <div>Last Raw Magnitude measurement: <b>{{ camera_sqm_raw_mag_str }}</b></div>
+                <div>Expected SQM: <b>{{ camera_sqm_calc_sqm_str }}</b></div>
             </div>
         </div>
     </div>
