--- a/indi_allsky/flask/templates/cameraLens.html
+++ b/indi_allsky/flask/templates/cameraLens.html
@@ -76,6 +76,11 @@ var camera_id = {{ camera_id }};
     </div>
 
     <div class="row">
+        <div class="col-2">Binning</div>
+        <div class="col-4">{{ camera.minBinning }} - {{ camera.maxBinning }}</div>
+    </div>
+
+    <div class="row">
         <div class="col-2">Exposure</div>
         <div class="col-4">{{ "%0.6f"|format(camera.minExposure | float) }} - {{ camera.maxExposure | int }}s</div>
     </div>
