--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -145,8 +145,12 @@ var camera_id = {{ camera_id }};
             {{ form_config.CCD_CONFIG__NIGHT__BINNING(class='form-control bg-secondary') }}
             <div id="CCD_CONFIG__NIGHT__BINNING-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-8">Min 1, Max 4 - Camera dependent</div>
+        <div class="col-sm-8">
+            <div>Min: <b>{{ camera_minBinning }}</b> - Max: <b>{{ camera_maxBinning }}</b></div>
+        </div>
     </div>
+
+    <hr>
 
     <div class="form-group row">
         <div class="col-sm-2">
@@ -168,6 +172,8 @@ var camera_id = {{ camera_id }};
         </div>
         <div class="col-sm-8"></div>
     </div>
+
+    <hr>
 
     <div class="form-group row">
         <div class="col-sm-2">
@@ -3655,9 +3661,7 @@ var camera_id = {{ camera_id }};
             <div id="CAMERA_SQM__BINNING-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>
-                <div class="col-sm-8">Min 1, Max 4 - Camera dependent</div>
-            </div>
+            <div>Min: <b>{{ camera_minBinning }}</b> - Max: <b>{{ camera_maxBinning }}</b></div>
         </div>
     </div>
 
