move camera info view to info

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -3476,7 +3476,10 @@ var camera_id = {{ camera_id }};
         </div>
         <div class="col-sm-5">
             <div><a href="https://github.com/aaronwmorris/indi-allsky/wiki/Detection-Masks" class="text-decoration-none link-info" target="_blank">Detection Mask Wiki</a></div>
-            <div>Image mask file for star, meteor, and SQM detection area.  Must be a PNG</div>
+            <div>
+                <div>Image mask file for star, meteor, and SQM detection area.  Must be a PNG</div>
+                <div><span class="badge rounded-pill bg-info text-dark">Note</span> Mask must use the same diminsions as the camera bin 1 settings</div>
+            </div>
         </div>
     </div>
 
